--- a/login.html
+++ b/login.html
@@ -66,7 +66,7 @@
                                         </div>
 
                                         <div class="pt-1 mb-4">
-                                            <button class="btn btn-dark btn-lg btn-block" type="submit">Login</button>
+                                            <a href="patients.html" class="btn btn-dark btn-lg btn-block">Login</a>
                                         </div>
 
                                         <a class="small text-muted" href="#!">Forgot password?</a>
