--- a/apoitements.html
+++ b/apoitements.html
@@ -97,7 +97,7 @@
             <div class="row mb-4">
                 <div class="col">
                     <button class="btn-primary" data-bs-toggle="modal" data-bs-target="#addAppointmentModal">
-                        <i class="fas fa-plus"></i> Add Appointment
+                        <i class="fas fa-plus"></i> Ajouter un rendez-vous
                     </button>
                 </div>
             </div>
@@ -105,12 +105,12 @@
                 <table class="table table-bordered table-striped">
                     <thead class="table-dark">
                         <tr>
-                            <th>CNI</th>
-                            <th>Patient Name</th>
-                            <th>Date</th>
-                            <th>Time</th>
-                            <th>Reason</th>
-                            <th>Actions</th>
+                            <th>CNI:</th>
+                            <th>Nom du patient:</th>
+                            <th>Date:</th>
+                            <th>Temps:</th>
+                            <th>Raison:</th>
+                            <th>Actes:</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -123,7 +123,7 @@
                             <td>Regular Check-up</td>
                             <td>
                                 <button class="btn btn-warning btn-sm" data-bs-toggle="modal" data-bs-target="#editAppointmentModal"><i class="fas fa-edit"></i> Edit</button>
-                                <button class="btn btn-danger btn-sm"><i class="fas fa-trash"></i> Delete</button>
+                                <button class="btn btn-danger btn-sm"><i class="fas fa-trash"></i>Supprimer</button>
                             </td>
                         </tr>
                         <tr>
@@ -134,7 +134,7 @@
                             <td>other</td>
                             <td>
                                 <button class="btn btn-warning btn-sm" data-bs-toggle="modal" data-bs-target="#editAppointmentModal"><i class="fas fa-edit"></i> Edit</button>
-                                <button class="btn btn-danger btn-sm"><i class="fas fa-trash"></i> Delete</button>
+                                <button class="btn btn-danger btn-sm"><i class="fas fa-trash"></i> Supprimer</button>
                             </td>
                         </tr>
                         <tr>
@@ -145,7 +145,7 @@
                             <td>Flu Symptoms</td>
                             <td>
                                 <button class="btn btn-warning btn-sm" data-bs-toggle="modal" data-bs-target="#editAppointmentModal"><i class="fas fa-edit"></i> Edit</button>
-                                <button class="btn btn-danger btn-sm"><i class="fas fa-trash"></i> Delete</button>
+                                <button class="btn btn-danger btn-sm"><i class="fas fa-trash"></i> Supprimer</button>
                             </td>
                         </tr>
                         <!-- Add more appointments as needed -->
