--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
                     <div class="card">
                         <div class="row g-0">
                             <div class="col-md-6 col-lg-5 d-none d-md-block">
-                                <img src="doctor.png"
+                                <img src="images/doctor.png"
                                     alt="login form" class="img-fluid login-img" />
                             </div>
                             <div class="col-md-6 col-lg-7 d-flex align-items-center">
